[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "boututils"
description = "Python utilities for BOUT++"
readme = "README.md"
authors = [{name = "Ben Dudson"}, {name = "BOUT++ team"}]
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords=[
    "bout++",
    "bout",
    "plasma",
    "physics",
    "data-extraction",
    "data-analysis",
    "data-visualization",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22.0",
    "matplotlib>=3.2.1",
    "scipy>=1.4.1",
    "netCDF4",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx>=3.4,<5",
]

[project.urls]
Tracker = "https://github.com/boutproject/boututils/issues/"
Documentation = "https://bout-dev.readthedocs.io/en/latest/"
Source = "https://github.com/boutproject/boututils/"

[tool.setuptools]
packages = ["boututils"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools_scm]
write_to = "boututils/_version.py"

[tool.pytest.ini_options]
addopts = "--cov=boututils"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
